--- a/styles2.css
+++ b/styles2.css
@@ -6,25 +6,28 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    position: relative;
-    margin: 0; /* Asegura que el cuerpo no tenga márgenes */
-    padding: 0;
+    min-height: 100vh; /* Para asegurar que el body ocupe toda la ventana */
+    margin: 0;
+    background-color: #000000;
+    overflow: hidden; /* Previene el scroll */
 }
+
 
 .container {
     background-color: #fff;
-    padding: 20px;
+    padding: 30px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 40px;
     width: 100%;
     max-width: 400px; /* Limita el ancho máximo */
+    max-height: 90vh; /* Limita la altura máxima */
+
     position: relative;
     z-index: 10; /* Asegura que el formulario esté por encima del loader */
+    overflow: hidden;
 }
 
 h1 {
@@ -144,12 +147,12 @@ button:hover {
 /* Media query para dispositivos móviles */
 @media (max-width: 480px) {
     body {
-        padding: 0 15px; /* Ajusta el padding */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
+        padding: 0 15px; /* Este padding solo es necesario si quieres espacio a los lados. */
+        display: flex; /* Mantén esto si necesitas centrar elementos. */
+        justify-content: center; /* Lo mismo que en el estilo general del body. */
+        align-items: center; 
+        flex-direction: column; /* Puedes eliminar esto si no tienes varios elementos apilados. */
+    }    
 
     .container {
         width: 100%;
@@ -179,5 +182,11 @@ button:hover {
 
     .operacion-btn {
         width: 100%; /* Hace que los botones ocupen todo el ancho disponible */
+    }
+}
+
+@media (max-width: 768px) {
+    body {
+        overflow: hidden; /* Evita scroll en dispositivos pequeños */
     }
 }
